Ajustes em testes Questão 1